tests/baselines/reference/restElementWithAssignmentPattern3.errors.txt
tests/cases/conformance/es6/destructuring/restElementWithAssignmentPattern3.ts(3,6): error TS2322: Type '文字 | 数字' is not assignable to type '文字'.
  Type '数字' is not assignable to type '文字'.
tests/cases/conformance/es6/destructuring/restElementWithAssignmentPattern3.ts(3,9): error TS2322: Type '文字 | 数字' is not assignable to type '数字'.
  Type '文字' is not assignable to type '数字'.


==== tests/cases/conformance/es6/destructuring/restElementWithAssignmentPattern3.ts (2 errors) ====
    var a: string, b: number;
    var tuple: [string, number] = ["", 1];
    [...[a, b = 0]] = tuple;
         ~
!!! error TS2322: Type '文字 | 数字' is not assignable to type '文字'.
!!! error TS2322:   Type '数字' is not assignable to type '文字'.
            ~
!!! error TS2322: Type '文字 | 数字' is not assignable to type '数字'.
!!! error TS2322:   Type '文字' is not assignable to type '数字'.